[package]
name = "ree-types"
version = "0.6.1"
edition = "2021"
license = "MIT"
homepage = "https://www.omnity.network/"
repository = "https://github.com/octopus-network/ree-types"
description = "Data type definitions of REE."

[lib]
name = "ree_types"
crate-type = ["lib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18"
anyhow =  "1"
thiserror = "1"
generic-array = "0.14"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
bitcoin = { version = "0.32", default-features = false, features = ["base64", "serde"] }
serde_bytes = "0.11"
bincode = "1.3"

[dev-dependencies]
serde_json = "1.0"
