[package]
name = "ree-exchange-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
anyhow =  "1"
thiserror = "1"
generic-array = "0.14"
ic-stable-structures = "0.7"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
bitcoin = { version = "0.32", default-features = false, features = ["base64", "serde"] }
serde_bytes = "0.11"
bincode = "1.3"
ree-exchange-sdk-macro = { path = "../sdk-macro", version = "0.7.1" }

[dev-dependencies]
serde_json = "1.0"
