[package]
name = "ree-exchange-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18"
ic-stable-structures = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
bincode = "1.3"
ree-exchange-sdk-macro = { path = "../sdk-macro", version = "0.11" }
ree-types = { path = "../types", version = "0.11" }
